k8s/staging/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-staging
  labels:
    name: ecommerce-staging
    environment: staging
